# easyfund

./: .env.example  .gitignore  Dockerfile  README.md  build.sh  entrypoint.sh  manage.sh  pyproject.toml  requirements.txt
backend/: app.py  auth.py  database.py  migrate.py  models.py  schemas.py
backend/routers/: accounts.py  auth.py  chat.py  dashboard.py  deposits.py  fund_flows.py  import_export.py  investments.py  stock_tracker.py  transactions.py
backend/services/: ai_service.py  currency.py  excel_analyzer.py  excel_mapper.py  import_service.py  market.py
data/mock/: accounts.json  ai_config.json  conversations.json  deposits.json  exchange_rates.json  fund_flows.json  holdings.json  transactions.json  watchlist.json
frontend/: index.html  vite.config.js
frontend/src/: App.vue  api.js
frontend/src/components/: AiChat.vue
frontend/src/composables/: useAiChat.js  useAuth.js  useCurrencies.js  useFormatters.js  useScreenshot.js
frontend/src/router/: index.js
frontend/src/stores/: accounts.js  dashboard.js  index.js  stockTracker.js
frontend/src/views/: Accounts.vue  Dashboard.vue  DataImport.vue  Investments.vue  Login.vue  StockTracker.vue
