[project]
name = "easyfund"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.3",
    "openpyxl>=3.1.5",
    "bcrypt>=4.0.0",
    "pyjwt>=2.8.0",
    "python-multipart>=0.0.24",
    "uvicorn>=0.44.0",
    "yfinance>=1.2.1",
    "httpx>=0.28.0",
    "tortoise-orm>=0.24.0",
    "aiosqlite>=0.20.0",
]
